--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 nav {
-    background-color: rgb(0, 0, 0);
+    background-color: #ff746c;
     position: fixed;
     top: 0;
     left: 0;
