--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 nav {
-    background-color: #ff746c;
+    background-color: #3f3f3f;
     position: fixed;
     top: 0;
     left: 0;
