--- a/style.css
+++ b/style.css
@@ -52,6 +52,17 @@ p {
 }
 
 @media (max-width: 768px) {
+    nav {
+        background-color: #3f3f3f;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 70px;
+        display: flex;
+        align-items: center;
+        z-index: 999;    
+    }
     img {
         max-width: 40%;
         margin-top: 100px;
